--- a/.github/workflows/pytest-ci.yml
+++ b/.github/workflows/pytest-ci.yml
@@ -1,9 +1,15 @@
 name: PyTest
 
 on:
+  push:
+    branches: ["master"]
   pull_request:
-    paths:
-      - 'backend/**'
+    branches: ["master"]
+  workflow_dispatch:
+
+defaults:
+  run:
+    working-directory: ./backend
 
 jobs:
   build:
