--- a/.github/workflows/pytest-ci.yml
+++ b/.github/workflows/pytest-ci.yml
@@ -7,6 +7,10 @@ on:
     branches: ["master"]
   workflow_dispatch:
 
+defaults:
+  run:
+    working-directory: ./backend
+
 jobs:
   build:
 
@@ -21,12 +25,10 @@ jobs:
         python-version: '3.10'
 
     - name: Install dependencies
-      working-directory: ./backend
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements.pip
 
     - name: Run tests
-      working-directory: ./backend
       run: |
         python -m pytest -m unit
