--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "e2e:chrome": "cypress run --browser chrome",
+    "e2e:electron": "cypress run --browser electron"
   },
   "eslintConfig": {
     "extends": [
